<resources>
    <string name="app_name">Submission-Suitmedia</string>
    <string name="email_example_com">email@example.com</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="john_doe">John Doe</string>
    <string name="third_screen">Third Screen</string>
    <string name="back_button">Back Button</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="name">Name</string>
    <string name="next">NEXT</string>
    <string name="check">CHECK</string>
    <string name="palindrome">Palindrome</string>
    <string name="no_users_found">No users found</string>
</resources>