<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FirstScreenActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/ic_photo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"

        android:hint="@string/name"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@android:color/darker_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="@font/poppins"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPalindrome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        android:layout_below="@+id/textInputLayoutName"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/palindrome"
        android:fontFamily="@font/poppins"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@android:color/darker_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPalindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="@font/poppins"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/textInputLayoutPalindrome"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/check"
        android:fontFamily="@font/poppins"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/buttonCheck"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/next"
        android:fontFamily="@font/poppins"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</RelativeLayout>